--- a/BatteryAlarm/bin/AndroidManifest.xml
+++ b/BatteryAlarm/bin/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/battery_caution"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <receiver android:process=":remote" android:name="Alarm"/>
